.provarCaches/00DdL000006WmAzUAK/objects/Instructor__c.object
<CustomObject>
    <fields>
        <fullName>Bonus__c</fullName>
        <formula>IF( Salary__c &gt; 10000,  (Salary__c * 20) / 100, (Salary__c * 10) / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Instructors</relationshipLabel>
        <relationshipName>Instructors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This custom field is used to store the name of the instructor</description>
        <inlineHelpText>Please enter instructor name</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Experience__c</fullName>
        <description>This custom field is used to store the Instructor Year of Experience</description>
        <inlineHelpText>Please enter instructor YOE</inlineHelpText>
        <label>Number of Experience</label>
        <precision>3</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <description>This custom field is used to store the instructor salary</description>
        <inlineHelpText>Please enter instructor salary</inlineHelpText>
        <label>Salary</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Salary__c</fullName>
        <formula>Salary__c  +  Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekdays__c</fullName>
        <label>Weekdays</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Weekdays</valueSetName>
        </valueSet>
    </fields>
    <label>Instructor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Rating__c</columns>
        <columns>Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Experienced_Instructor</fullName>
        <columns>Name__c</columns>
        <columns>NAME</columns>
        <columns>Rating__c</columns>
        <columns>Number_of_Experience__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Number_of_Experience__c</field>
            <operation>greaterOrEqual</operation>
            <value>3</value>
        </filters>
        <label>Experienced Instructor</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Instructor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instructors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_rule</fullName>
        <active>true</active>
        <description>Rating should be greater than or equal to 1 and less than and equal to 5</description>
        <errorConditionFormula>OR( Rating__c &lt; 1,  Rating__c &gt; 5)</errorConditionFormula>
        <errorDisplayField>Rating__c</errorDisplayField>
        <errorMessage>Rating should be between 1 to 5</errorMessage>
    </validationRules>
</CustomObject>